Fixes #540